# TaH

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bash/: eval_base.sh  eval_oracle.sh  eval_route.sh  eval_tah.sh
script/analysis/: iter_pred_analysis_backup.py
script/evaluation/: baseline_routellm_getscore.py  compute_routellm_threshold_accuracy.py  eval.py
script/playground/: inference_example.py
script/preparation/: download.py  filter_split.py  label.py  prune.py
script/recipes/: README.md
script/recipes/qwen3_0.6/: eval_tah.yaml  sft_tah_step1.yaml  sft_tah_step2.yaml
script/recipes/qwen3_1.7/: eval_tah.yaml  eval_tah_oracle.yaml  sft_base.yaml  sft_tah_step1.yaml  sft_tah_step2.yaml
script/recipes/qwen3_1.7_1gpu/: sft_tah_step1.yaml  sft_tah_step2.yaml
script/train/: SFT_TaH.py
tah/: __init__.py
tah/evaluate/: __init__.py  backends.py  codeeval.py  datasets.py  eval_unified.py  jobs.py  matheval.py  utils.py
tah/evaluate/eval_configs/: dataset_configs.json
tah/model/: __init__.py  adapter.py  causal_cache.py  input_updater.py  iter_decider.py  loss.py  recurrent_transformer.py  registry.py  tah_config.py  tah_model.py  utils.py
tah/train/: __init__.py  data_collator.py  trainer.py
tah/utils/: __init__.py  data_prepare.py  sampling.py
tests/: README.md  _harness.py  bench.py  bench_compile.py  conftest.py  test_causal_cache.py  test_input_updater.py  test_iter_decider.py  test_iter_label.py  test_jobs_runner.py  test_loss.py  test_output_updater.py  test_released_checkpoint.py  test_save_load.py  test_sft_smoke.py  test_wrapper_forward.py
tests/baselines/: .gitignore
