[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tah"
version = "0.1.0"
description = "Think-at-Hard: Selective Latent Iterations to Improve Reasoning Language Models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "transformers==4.52.4",
    "torch==2.6.0",
    "accelerate",
    "datasets",
    "peft==0.15.2",
]

[project.license]
text = "MIT"

[project.optional-dependencies]
training = ["wandb", "deepspeed==0.17.1", "flash-attn==2.7.3"]
evaluation = [
    "latex2sympy2==1.9.1",
    "pylatexenc==2.10",
    "sympy==1.13.1",
    "math_verify",
    "termcolor",
    "evalplus",
    "sglang>=0.4.6",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools.packages.find]
include = ["tah*"]
